# rust-music

./: .gitignore  Cargo.toml  README.md
src/: chord.rs  main.rs  scale.rs
