[package]
name = "rustmusic"
version = "0.1.0"
authors = ["Ryan Ferguson <ryan28561@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dependencies.fluidsynth]
git = "https://github.com/scholtzan/rust-fluidsynth"

